[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeprism-devtools"
version = "0.1.0"
description = "Python devtools for the pokeprism Pokémon Crystal disassembly fork"
requires-python = ">=3.10"
dependencies = ["questionary"]

[project.scripts]
prism-dev  = "pokeprism_devtools.dev_server.cli:main"
prism-sym  = "pokeprism_devtools.sym_lookup:main"
prism-maps = "pokeprism_devtools.map_inspect:main"

[tool.setuptools.packages.find]
where = ["src"]
