[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeprism-devtools"
version = "0.3.0"
description = "Python devtools for the pokeprism Pokémon Crystal disassembly fork"
requires-python = ">=3.10"
dependencies = ["questionary", "Pillow"]

[project.scripts]
prism-dev     = "pokeprism_devtools.dev_server.cli:main"
prism-sym     = "pokeprism_devtools.sym_lookup:main"
prism-maps    = "pokeprism_devtools.map_inspect:main"
prism-map     = "pokeprism_devtools.map_show:main"
prism-usage   = "pokeprism_devtools.usage:main"
prism-mapview = "pokeprism_devtools.mapview:main"
prism-gfx     = "pokeprism_devtools.gfx_view:main"
prism-mapfit  = "pokeprism_devtools.mapfit:main"

[tool.setuptools.packages.find]
where = ["src"]
